# quanttide-base-toolkit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  STATUS.md  TODO.md  pubspec.yaml  pyproject.toml
.github/workflows/: publish-django.yml  publish-flutter.yml  publish-python.yml  verify-django.yml  verify-flutter.yml  verify-python.yml
django_quanttide/: apps.py
django_quanttide/models/: __init__.py  choices.py  fields.py  models.py
django_quanttide/test/: __init__.py  models.py
docs/dev/: local_storage.md
docs/spec/: local_storage.md  standard_fields.md
docs/user/: local_storage.md
example/: .gitignore  pubspec.yaml
example/lib/: main.dart
examples/ra/: manage.py
examples/ra/ra/: asgi.py  settings.py  wsgi.py
intergration_test/: network_test.dart
lib/: api_client.dart  flutter_quanttide.dart  quanttide_design.dart
lib/src/api/: client.dart  exceptions.dart
lib/src/blocs/: blocs.dart  domain_models.dart  domain_models.freezed.dart  domain_models.g.dart  events.dart
lib/src/models/: entities.freezed.dart  entities.g.dart  user.dart  user.freezed.dart  user.g.dart
lib/src/repositories/: api_services.dart  repositories.dart
test/: api_client_test.dart  login_screen_test.dart  mock.dart  network_widget_test.dart  quanttide_design_test.dart  recase_test.dart
test/blocs/: domain_models_test.dart
test/models/: entities_test.dart
test/repositories/: api_services_test.dart
test/utils/: recase_test.dart
tests/: models.py  test_models.py  test_models_fields.py
(+7 files in other folders)
